--- a/MyPortfolio/frontend.html
+++ b/MyPortfolio/frontend.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+
+    <link rel="icon" href="Images/favicon.ico" type="x-logo/img">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6d30c732f1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <div id="front">
@@ -15,28 +19,35 @@
                 <div class="about-col-1">
                     <img src="Images/Martin.png" alt="image">
                 </div>
-        <div class="about-col-2">
-            <h1 class="sub-title">Frontend</h1>
-            <p style="font-size: 25px;">
-                I specialize in creating interactive and visually attractive user interfaces for websites 
-                and web applications. With my expertise in HTML, CSS, and JavaScript, I design seamless and 
-                engaging experiences that capture the attention of users.<br><br>
-                Using HTML, I structure the content of the website, ensuring that it is well-organized and easy to navigate.
-                 CSS allows me to apply styles and layout to make the interface visually appealing. 
-                 JavaScript adds interactivity and functionality, making the interface come alive.
-                My goal is to create user interfaces that are not only visually appealing but also intuitive and easy to use. 
-                I carefully consider the user experience, ensuring that visitors can effortlessly interact with the website or application.<br><br> 
-                By combining these skills, I bring websites and web applications to life, making them captivating and enjoyable for users. 
-                If you're looking for a seamless and engaging user experience, I would love to help you create an interface that stands out 
-                and keeps your users engaged. <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a>
-            </p>
-    </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">Frontend</h1>
+                    <p style="font-size: 25px;">
+                        I specialize in creating interactive and visually attractive user interfaces for websites
+                        and web applications. With my expertise in HTML, CSS, and JavaScript, I design seamless and
+                        engaging experiences that capture the attention of users.<br><br>
+                        Using HTML, I structure the content of the website, ensuring that it is well-organized and easy
+                        to navigate.
+                        CSS allows me to apply styles and layout to make the interface visually appealing.
+                        JavaScript adds interactivity and functionality, making the interface come alive.
+                        My goal is to create user interfaces that are not only visually appealing but also intuitive and
+                        easy to use.
+                        I carefully consider the user experience, ensuring that visitors can effortlessly interact with
+                        the website or application.<br><br>
+                        By combining these skills, I bring websites and web applications to life, making them
+                        captivating and enjoyable for users.
+                        If you're looking for a seamless and engaging user experience, I would love to help you create
+                        an interface that stands out
+                        and keeps your users engaged. <a href="index.html#contact"
+                            style="text-decoration: none; color: #ff004f;">Let's talk</a>
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
-    <a href="index.html#services" class="btn">Go Back</a>
-    
-    <div class="copyright">
-        <p>Copyright &copy Martinmatics. Made <i class="fa-solid fa-heart"></i> by Martin</p>
-    </div>
+        <a href="index.html#services" class="btn">Go Back</a>
+
+        <div class="copyright">
+            <p>Copyright &copy Martinmatics. Made <i class="fa-solid fa-heart"></i> by Martin</p>
+        </div>
 </body>
+
 </html>
