--- a/MyPortfolio/servicesextention.html
+++ b/MyPortfolio/servicesextention.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+
+    <link rel="icon" href="Images/favicon.ico" type="x-logo/img">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6d30c732f1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <div id="servicesextent">
@@ -16,26 +20,26 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Technical Consultation</h2>
-                    <p>I offer my expertise as a technical consultant, 
-                        providing guidance on C# development best practices, architectural decisions, 
+                    <p>I offer my expertise as a technical consultant,
+                        providing guidance on C# development best practices, architectural decisions,
                         and technology selection.</p>
                     <a href="consultant.html#consult">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-sharp fa-solid fa-crop"></i>
                     <h2>API Development</h2>
-                    <p> I have extensive experience in building robust 
-                        and scalable RESTful APIs using C# and frameworks like 
+                    <p> I have extensive experience in building robust
+                        and scalable RESTful APIs using C# and frameworks like
                         ASP.NET Web API or ASP.NET Core Web API.</p>
-                         <a href="api.html#apipage">Learn more</a>
+                    <a href="api.html#apipage">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>Database Development and Integration</h2>
-                    <p>My expertise in working with databases, combined with C# and 
-                        frameworks like Entity Framework or Dapper, has enabled me to 
+                    <p>My expertise in working with databases, combined with C# and
+                        frameworks like Entity Framework or Dapper, has enabled me to
                         create efficient and well-structured database solutions.</p>
-                        <a href="database.html#databasepage">Learn more</a>
+                    <a href="database.html#databasepage">Learn more</a>
                 </div>
             </div>
 
@@ -47,6 +51,7 @@
     <div class="copyright">
         <p>Copyright &copy Martinmatics. Made <i class="fa-solid fa-heart"></i> by Martin</p>
     </div>
-    
+
 </body>
+
 </html>
