--- a/MyPortfolio/api.html
+++ b/MyPortfolio/api.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+
+    <link rel="icon" href="Images/favicon.ico" type="x-logo/img">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6d30c732f1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <div id="apipage">
@@ -15,17 +19,17 @@
                 <div class="about-col-1">
                     <img src="Images/Martin.png" alt="image">
                 </div>
-        <div class="about-col-2">
-            <h1 class="sub-title">API Development</h1>
-            <p style="font-size: 25px;">I have extensive experience in building robust and scalable 
-                RESTful APIs using C# and frameworks like ASP.NET Web API or ASP.NET Core Web API. 
-                With a focus on delivering efficient and secure communication between client applications 
-                and servers, I have developed APIs that handle complex data operations, implement 
-                authentication and authorization mechanisms, and support integration with third-party services. 
-                <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a>
-            </p>
-        </div>
-    </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">API Development</h1>
+                    <p style="font-size: 25px;">I have extensive experience in building robust and scalable
+                        RESTful APIs using C# and frameworks like ASP.NET Web API or ASP.NET Core Web API.
+                        With a focus on delivering efficient and secure communication between client applications
+                        and servers, I have developed APIs that handle complex data operations, implement
+                        authentication and authorization mechanisms, and support integration with third-party services.
+                        <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <a href="servicesextention.html#servicesextent" class="btn">Go Back</a>
@@ -33,6 +37,7 @@
     <div class="copyright">
         <p>Copyright &copy Martinmatics. Made <i class="fa-solid fa-heart"></i> by Martin</p>
     </div>
-    
+
 </body>
+
 </html>
