--- a/MyPortfolio/consultant.html
+++ b/MyPortfolio/consultant.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+
+    <link rel="icon" href="Images/favicon.ico" type="x-logo/img">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6d30c732f1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <div id="consult">
@@ -15,17 +19,18 @@
                 <div class="about-col-1">
                     <img src="Images/Martin.png" alt="image">
                 </div>
-        <div class="about-col-2">
-            <h1 class="sub-title">Technical Consultation</h1>
-            <p style="font-size: 25px;">I offer my expertise as a technical consultant, 
-                providing guidance on C# development best practices, architectural decisions,
-                 and technology selection. Through comprehensive code reviews, I have identified 
-                 areas for improvement, optimized application design and performance, and provided
-                  actionable recommendations to drive the success of projects. My consultancy services
-                  have helped clients make informed decisions and achieve their desired outcomes. 
-                  <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a></p>
-        </div>
-    </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">Technical Consultation</h1>
+                    <p style="font-size: 25px;">I offer my expertise as a technical consultant,
+                        providing guidance on C# development best practices, architectural decisions,
+                        and technology selection. Through comprehensive code reviews, I have identified
+                        areas for improvement, optimized application design and performance, and provided
+                        actionable recommendations to drive the success of projects. My consultancy services
+                        have helped clients make informed decisions and achieve their desired outcomes.
+                        <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <a href="servicesextention.html#servicesextent" class="btn">Go Back</a>
@@ -33,6 +38,7 @@
     <div class="copyright">
         <p>Copyright &copy Martinmatics. Made <i class="fa-solid fa-heart"></i> by Martin</p>
     </div>
-    
+
 </body>
+
 </html>
