--- a/MyPortfolio/database.html
+++ b/MyPortfolio/database.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+
+    <link rel="icon" href="Images/favicon.ico" type="x-logo/img">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6d30c732f1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <div id="databasepage">
@@ -15,19 +19,19 @@
                 <div class="about-col-1">
                     <img src="Images/Martin.png" alt="image">
                 </div>
-        <div class="about-col-2">
-            <h1 class="sub-title">Database Development and Integration</h1>
-            <p style="font-size: 25px;">My expertise in working with databases, 
-                combined with C# and frameworks like Entity Framework or Dapper, 
-                has enabled me to create efficient and well-structured database solutions. 
-                I have designed and implemented database schemas, optimized SQL queries for
-                 performance, and seamlessly integrated databases with C# applications. 
-                 Through careful database management, I have ensured data consistency, 
-                 reliability, and scalability in my projects. 
-                 <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a>
-            </p>
-        </div>
-    </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">Database Development and Integration</h1>
+                    <p style="font-size: 25px;">My expertise in working with databases,
+                        combined with C# and frameworks like Entity Framework or Dapper,
+                        has enabled me to create efficient and well-structured database solutions.
+                        I have designed and implemented database schemas, optimized SQL queries for
+                        performance, and seamlessly integrated databases with C# applications.
+                        Through careful database management, I have ensured data consistency,
+                        reliability, and scalability in my projects.
+                        <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <a href="servicesextention.html#servicesextent" class="btn">Go Back</a>
@@ -35,6 +39,7 @@
     <div class="copyright">
         <p>Copyright &copy Martinmatics. Made <i class="fa-solid fa-heart"></i> by Martin</p>
     </div>
-    
+
 </body>
+
 </html>
