--- a/MyPortfolio/maintainance.html
+++ b/MyPortfolio/maintainance.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+
+
+    <link rel="icon" href="Images/favicon.ico" type="x-logo/img">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6d30c732f1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <div id="maintain">
@@ -15,16 +20,17 @@
                 <div class="about-col-1">
                     <img src="Images/Martin.png" alt="image">
                 </div>
-        <div class="about-col-2">
-            <h1 class="sub-title">Maintenance and Bug Fixing</h1>
-            <p style="font-size: 25px;">I excel in providing ongoing support and maintenance for existing 
-                C# projects. With a meticulous approach to bug fixing and optimization, I have successfully
-                 diagnosed and resolved complex issues, improved application performance, and ensured the 
-                 stability of critical systems. My dedication to maintaining high-quality code and providing 
-                 timely support has resulted in seamless operations for clients. 
-                  <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a></p>
-        </div>
-    </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">Maintenance and Bug Fixing</h1>
+                    <p style="font-size: 25px;">I excel in providing ongoing support and maintenance for existing
+                        C# projects. With a meticulous approach to bug fixing and optimization, I have successfully
+                        diagnosed and resolved complex issues, improved application performance, and ensured the
+                        stability of critical systems. My dedication to maintaining high-quality code and providing
+                        timely support has resulted in seamless operations for clients.
+                        <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <a href="index.html#services" class="btn">Go Back</a>
@@ -32,6 +38,7 @@
     <div class="copyright">
         <p>Copyright &copy Martinmatics. Made <i class="fa-solid fa-heart"></i> by Martin</p>
     </div>
-    
+
 </body>
+
 </html>
