--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -743,11 +743,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="#" title="twitter" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="#" title="facebook" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="#" title="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="#" title="skype" class="google-plus"><i class="bi bi-skype"></i></a>
+              <a href="#" title="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
