--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -543,7 +543,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <div class="icon"><i class="fas fa-laptop-code"></i></div>
             <h4><a href="">Web Application Development</a></h4>
             <p>I specialize in developing robust and interactive web applications using C# and industry-leading
               frameworks like ASP.NET, ASP.NET Core, or Blazor.</p>
@@ -552,7 +552,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
+            <div class="icon"><i class="fas fa-desktop"></i></div>
             <h4><a href="">Frontend</a></h4>
             <p>I specialize in building interactive and visually appealing user interfaces that bring websites and web
               applications to life. Using my expertise in HTML, CSS, and JavaScript, I create seamless and engaging
@@ -562,7 +562,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <div class="icon"><i class="fas fa-tools"></i></div>
             <h4><a href="">Maintenance and Bug Fixing</a></h4>
             <p>I excel in providing ongoing support and maintenance for existing C# projects.</p>
           </div>
@@ -570,7 +570,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
+            <div class="icon"><i class="fas fa-comments"></i></div>
             <h4><a href="">Technical Consultation</a></h4>
             <p>I offer my expertise as a technical consultant, providing guidance on C# development best practices,
               architectural decisions, and technology selection.</p>
@@ -579,7 +579,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
+            <div class="icon"><i class="fas fa-code"></i></div>
             <h4><a href="">API Development</a></h4>
             <p>I have extensive experience in building robust and scalable RESTful APIs using C# and frameworks like
               ASP.NET Web API or ASP.NET Core Web API.</p>
@@ -588,7 +588,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
+            <div class="icon"><i class="fas fa-database"></i></div>
             <h4><a href="">Database Development and Integration</a></h4>
             <p>My expertise in working with databases, combined with C# and frameworks like Entity Framework or Dapper,
               has enabled me to create efficient and well-structured database solutions.</p>
