--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -208,6 +208,28 @@
               </div>
             </div>
           </div>
+          <div class="progress">
+            <span class="skill">Version Control<i class="val">100%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Design Patterns <i class="val">100%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+          <div class="progress">
+            <span class="skill">Soft Skills<i class="val">100%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
 
         </div>
 
@@ -237,9 +259,33 @@
             </div>
           </div>
           <div class="progress">
-            <span class="skill">Databases (SQL Server, MySQL, Postgress, MongoDb ) <i class="val">100%</i></span>
+            <span class="skill">Databases<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Unit Testing<i class="val">100%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Entity Framework Core <i class="val">90%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Blazor<i class="val">80%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -455,73 +501,93 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <h2>Experience</h2>
+        <p>Review my experience</p>
       </div>
 
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing
-                user-centered digital/print marketing material from initial concept to final, polished deliverable.</em>
+            <h4>Martin Nwatu Chukwuemeka</h4>
+            <p><em>Innovative and deadline-driven Fullstack C# Developer with 2+ years of experience designing and
+                developing user-centered web applications from initial concept to final, polished deliverable.</em>
             </p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>9 Shola Ademodi Street, Ejigbo, Lagos State</li>
+              <li>+234 - 9131518262</li>
+              <li>martinchukwuemeka67@gmail.com</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-              ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Mathematics (B-Tech)</h4>
+            <h5>2015 - 2019</h5>
+            <p><em>Federal University Of Technology Owerri, Nigeria</em></p>
+            <p>Developed strong analytical and problem-solving skills through rigorous coursework in advanced
+              mathematics, statistics, and computational methods. Applied mathematical theories and techniques to solve
+              real-world problems, preparing a solid foundation for a career in software development. Collaborated on
+              projects that required logical reasoning and precise calculations, enhancing my ability to approach
+              complex coding challenges with a structured mindset</p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-              unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
+            <h4>Software Engineer</h4>
+            <h5>Jan 2024 - present</h5>
+            <p><em>Axxess Texas, United States (Remote)</em></p>
+            <p>
+            <ul>
+              <li>Enhanced solution and application codebase through efficient coding practices and performance
+                optimizations.</li>
+              <li>Implemented SQL joins for effective management and querying of relational databases.</li>
+              <li>Utilized caching strategies to optimize application performance and reduce load times.</li>
+              <li>Developed and optimized LINQ queries, ensuring efficient data manipulation and retrieval.</li>
+            </ul>
             </p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Front-end Web Developer (Freelance)</h4>
+            <h5>2020 - present</h5>
+            <p><em>Lagos, Nigeria </em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production
-                communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project.
+              <li>Collaborated closely with clients to understand project
+                requirements, translate concepts into technical specifications, and deliver visually appealing and
+                user-friendly websites</li>
+              <li>Utilized a wide array of front-end technologies, including HTML5, CSS3, and JavaScript, to create
+                responsive and interactive web-pages
               </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the
-                design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Demonstrated expertise in modern front-end libraries
+                and frameworks, such as React.js, to develop dynamic and
+                efficient web applications</li>
+              <li>Employed version control tools like Git and GitHub to
+                maintain project code-bases, enabling efficient collaboration
+                and code management.</li>
+              <li>Kept abreast of industry trends and advancements
+                through continuous self-study, online courses, and active
+                participation in web development communities.</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Back-end Engineer</h4>
+            <h5>sept 2023 - jan 2024</h5>
+            <p><em>Trusoft Lagos Nigeria</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and
-                advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Collaborated with teams by Utilizing the .NET
+                framework and ASP.NET to build a robust back-end as
+                a service project, supporting thousands of daily
+                transactions.</li>
+              <li>Maintained a code-base with 95% test coverage, conducting unit and integration testing to ensure high
+                reliability.</li>
+              <li>Collaborated with front-end developers to deliver
+                seamless user experiences</li>
             </ul>
             </p>
           </div>
@@ -829,9 +895,9 @@
             <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
           </div>
         </div>
-        <div class="form-group mt-3">
+        <!-- <div class="form-group mt-3">
           <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-        </div>
+        </div> -->
         <div class="form-group mt-3">
           <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
@@ -860,6 +926,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
 
 </body>
 
