--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -56,10 +56,14 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/martinmatics100" target="_blank" title="github" class="github"><i
+            class="bi bi-github"></i></a>
+        <a href="https://web.facebook.com/profile.php?id=100082060447972" target="_blank" title="facebook"
+          class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://wa.link/15tx0p" target="_blank" title="whatsapp" class="whatsapp"><i
+            class="bi bi-whatsapp"></i></a>
+        <a href="https://www.linkedin.com/in/martin-nwatu/" target="_blank" title="linkedin" class="linkedin"><i
+            class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -671,8 +675,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Portfolio</h2>
-        <p>My Works</p>
+        <h2>My Works</h2>
+        <p>I love what I do! Check out my latest projects.</p>
       </div>
 
       <div class="row">
@@ -843,7 +847,7 @@
 
       <div class="section-title">
         <h2>Contact</h2>
-        <p>Contact Me</p>
+        <p>Get In Touch</p>
       </div>
 
       <div class="row mt-2">
@@ -851,7 +855,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>My Address</h3>
+            <h3>Where to Find Me</h3>
             <p>9 Shola Ademodi Street, Ejigbo, Lagos State</p>
           </div>
         </div>
@@ -861,11 +865,14 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" title="twitter" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" title="facebook" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" title="instagram" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" title="skype" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" title="linkedin" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/martinmatics100" target="_blank" title="github" class="github"><i
+                  class="bi bi-github"></i></a>
+              <a href="https://web.facebook.com/profile.php?id=100082060447972" target="_blank" title="facebook"
+                class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://wa.link/15tx0p" target="_blank" title="whatsapp" class="whatsapp"><i
+                  class="bi bi-whatsapp"></i></a>
+              <a href="https://www.linkedin.com/in/martin-nwatu/" target="_blank" title="linkedin" class="linkedin"><i
+                  class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -873,20 +880,20 @@
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
-            <h3>Email Me</h3>
+            <h3>Email Me At</h3>
             <p>martinchukwuemeka67@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
-            <p>+234 - 9131518262</p>
+            <h3>Call Me At</h3>
+            <p>+2349131518262</p>
           </div>
         </div>
       </div>
 
-      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+      <form name="submit-to-google-sheet" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -895,9 +902,6 @@
             <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
           </div>
         </div>
-        <!-- <div class="form-group mt-3">
-          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-        </div> -->
         <div class="form-group mt-3">
           <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
@@ -907,6 +911,7 @@
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
+        <span id="msg"></span>
       </form>
 
     </div>
@@ -926,8 +931,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
-
 </body>
 
 </html>
